fix adding numbers in weekends and shifts

--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -63,11 +63,13 @@ table td {
   min-width: 30px;
 }
 
-table .weekend {
+table .weekend,
+table .weekend input {
   background: #00ffff;
 }
 
-table .shift {
+table .shift,
+table .shift input {
   background: #f876f2;
 }
 
